--- a/vendor-dev/legerete/user-sign-in-otp/nette-src/templates/SignOtp/in.latte
+++ b/vendor-dev/legerete/user-sign-in-otp/nette-src/templates/SignOtp/in.latte
@@ -13,8 +13,7 @@
 	<div class="center-content">
 
 		<div class="col-md-3 center-margin">
-			{control signInForm}
-			{control forgotPasswordForm}
+			{control signInOtpForm}
 		</div>
 
 	</div>
