--- a/vendor-dev/legerete/user-sign-in/nette-src/Components/SignIn/templates/SignInPage.latte
+++ b/vendor-dev/legerete/user-sign-in/nette-src/Components/SignIn/templates/SignInPage.latte
@@ -3,7 +3,7 @@
  *}
 {block content}
 <div id="sign-in-form-container">
-	<form n:name="signInForm">
+	<form n:name="signInForm" class="ajax">
 		<div class="content-box modal-content">
 			<h3 class="content-box-header content-box-header-alt bg-default">
 				<span class="header-wrapper">
