--- a/vendor-dev/legerete/user-sign-in/nette-src/templates/@layout.latte
+++ b/vendor-dev/legerete/user-sign-in/nette-src/templates/@layout.latte
@@ -21,6 +21,7 @@
 
 		{block scripts}
 			<script src="{$basePath}/assets/js/all.min.js{resourceVersion}"></script>
+			<script src="{$basePath}/kendo/kendo.all.min.js{resourceVersion}"></script>
 		{/block}
 	</div>
 </body>
