--- a/vendor-dev/legerete/user-sign-in/nette-src/templates/Sign/in.latte
+++ b/vendor-dev/legerete/user-sign-in/nette-src/templates/Sign/in.latte
@@ -11,11 +11,11 @@
 
 <div class="center-vertical">
 	<div class="center-content">
-
 		<div class="col-md-3 center-margin">
-			{control signInForm}
+			{snippet signInForm}
+				{control $signInComponent}
+			{/snippet}
 			{control forgotPasswordForm}
 		</div>
-
 	</div>
 </div>
