--- a/app/templates/Homepage/default.latte
+++ b/app/templates/Homepage/default.latte
@@ -1,11 +1,11 @@
 {* This is the welcome page, you can delete it *}
 
 {block content}
-	<a n:href=":Legerete:User:Sign:in">Sign In</a><br>
+	<a n:href=":LeSignIn:UserSignIn:Sign:in">Sign In</a><br>
 	<a n:href=":SPA:">SPA</a>
 	<br><br><br>
 	<a n:href="test!" class="ajax">Ajax do test</a><hr>
-	<a n:href=":Legerete:User:Sign:in" class="web-socket">WS Sign:in</a><br>
+	<a n:href=":LeSignIn:UserSignIn:Sign:in" class="web-socket">WS Sign:in</a><br>
 	<a n:href="test!" class="web-socket">WS do tests</a><br>
 
 
