--- a/websrc/stylesheets/common/_colors.scss
+++ b/websrc/stylesheets/common/_colors.scss
@@ -1,4 +1,5 @@
 // Colors
+$color-danger: #F44336;
 $color-active: #e91e63;
 $color-focus: #3da6ff;
 $color-hover: #FAF9FA;
@@ -15,7 +16,7 @@ $color-widgets-bg-secondary: #f5f5f5;
 // Buttons
 $color-button-text-default: #555a60;
 $color-button-text-light: #FFFFFF;
-$color-button-danger-bg: #F44336;
+$color-button-danger-bg: $color-danger;
 $color-button-danger-border: darken($color-button-danger-bg, 10%);
 $color-button-danger-color: $color-button-text-light;
 
