Close #42 - IM - fullscreen

--- a/app/templates/SPA/snippets/header-nav-right.latte
+++ b/app/templates/SPA/snippets/header-nav-right.latte
@@ -136,4 +136,8 @@
 		</a>
 	</div>
 
+	<a data-bind="events: { click: toggleFullScreen}" href="#" class="hdr-btn" id="fullscreen" title="Toggle fullscreen">
+		<i class="glyph-icon icon-iconic-resize-full"></i>
+	</a>
+
 </div>
