--- a/websrc/stylesheets/common/_colors.scss
+++ b/websrc/stylesheets/common/_colors.scss
@@ -10,6 +10,7 @@ $color-text-hover: #000;
 $color-success: #4CAF50;
 $color-success-darken: darken($color-success, 10%);
 $color-bg-primary: #FFFFFF;
+$color-bg-secondary: #F4F5F7;
 $color-overlay-default: #000000;
 $color-widgets-bg-secondary: #f5f5f5;
 
