--- a/app/templates/SPA.@layout.latte
+++ b/app/templates/SPA.@layout.latte
@@ -394,8 +394,7 @@
 			<div id="page-sidebar">
 				<div id="header-logo" class="logo-bg">
 					<a href="index.html" class="logo-content-big" title="DelightUI">
-						Delight <i>UI</i>
-						<span>Material Design Dashboard Template</span>
+						<img src="{$basePath}/assets/images/logo.png" alt="">
 					</a>
 					<a href="index.html" class="logo-content-small" title="DelightUI">
 						Delight <i>UI</i>
