Closed #40 pridan prazdny viewModel a PHP tridy pro IM

--- a/app/templates/SPA/snippets/left-menu.latte
+++ b/app/templates/SPA/snippets/left-menu.latte
@@ -37,6 +37,12 @@
 			<span>{_left-menu.clients}</span>
 		</a>
 	</li>
+	<li>
+		<a data-bind="click: openPanel" data-panel-type="information-memorandum-edit" href="#">
+			<i class="glyph-icon icon-elusive-website"></i>
+			<span>{_left-menu.im}</span>
+		</a>
+	</li>
 	<li class="header"><span>{_left-menu.planning}</span></li>
 	<li>
 		<a data-bind="click: openPanel" data-panel-type="scheduler" href="#">
