--- a/websrc/stylesheets/main.scss
+++ b/websrc/stylesheets/main.scss
@@ -118,6 +118,7 @@
 @import '../template/icons/spinnericon/spinnericon';
 
 @import '../template/icons/iconic/iconic';
+@import '../template/icons/elusive/elusive';
 
 #loading {
   .svg-icon-loader {
