#61 Zmenseni view scheduleru

--- a/websrc/stylesheets/main.scss
+++ b/websrc/stylesheets/main.scss
@@ -116,6 +116,7 @@
 
 @import '../template/icons/iconic/iconic';
 @import '../template/icons/elusive/elusive';
+@import 'porta-customs';
 
 #loading {
   .svg-icon-loader {
